delta delta delta

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,14 +9,17 @@
     "Hrodwyn",
     "Levotta",
     "Nithara",
+    "Nithara's",
     "P'thael",
     "Piileva",
     "Seònaid",
     "Skymeet",
     "Solais",
+    "Sydän",
     "Taigh",
     "Woodwaker",
     "aetherial",
-    "mindscape"
+    "mindscape",
+    "shau"
   ]
 }
