--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "Greatmother",
     "Haneul",
     "Hrodwyn",
+    "Iòna",
     "Levotta",
     "Nithara",
     "Nithara's",
@@ -17,6 +18,8 @@
     "Solais",
     "Sydän",
     "Taigh",
+    "Undead",
+    "Valehdella",
     "Woodwaker",
     "aetherial",
     "mindscape",
