changing build command name

--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "scripts": {
     "start": "start-storybook -p 6006",
-    "build": "build-storybook --docs"
+    "gen-storybook": "build-storybook --docs"
   }
 }
