--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "@storybook/addon-docs": "^5.2.0-rc.11",
     "@storybook/addon-links": "^5.2.0-rc.11",
     "@storybook/addons": "^5.2.0-rc.11",
+    "@storybook/preset-typescript": "^1.1.0",
     "@storybook/react": "^5.2.0-rc.11",
-    "babel-loader": "^8.0.6"
+    "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
+    "react-docgen-typescript-loader": "^3.2.0",
+    "reactstrap": "^8.0.1",
+    "ts-loader": "^6.1.0",
+    "typescript": "^3.6.3"
   },
   "scripts": {
     "start": "start-storybook -p 6006",
