added some more stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,15 @@
     "Aiti",
     "Aiti's",
     "Aurinko",
+    "Brandal",
     "Feywild",
+    "Genasi",
     "Greatmother",
+    "Hamish",
     "Haneul",
     "Hrodwyn",
     "Iòna",
+    "Labarthance",
     "Levotta",
     "Nithara",
     "Nithara's",
